fixed css for test case cards to not be weird on small screens

--- a/symfony_project/web/card.css
+++ b/symfony_project/web/card.css
@@ -43,6 +43,11 @@
 .parallel-cards > .testcase-card {
 	width: 42%;
 }
+@media only screen and (max-width: 1460px) {
+	.parallel-cards > .testcase-card {
+		width: 100%;
+	}	
+}
 
 .serial-cards {
 	width: 30%;
